Fix dropdown truncate problem for 1280 resolution

--- a/sass/components/_chart-controls.scss
+++ b/sass/components/_chart-controls.scss
@@ -286,7 +286,7 @@
             }
         }
     }
-    &.smartcharts-1100 {
+    &.smartcharts-1280 {
         .cq-chart-controls {
             .ciq-menu {
                 width: 100px;
