--- a/sass/components/_ciq-chart-setting.scss
+++ b/sass/components/_ciq-chart-setting.scss
@@ -164,14 +164,6 @@
     }
 }
 
-.smartcharts-desktop {
-    &.smartcharts-480 {
-        .cq-setting-container {
-            width: 230px;
-        }
-    }
-}
-
 /* Mobile Style */
 .smartcharts-mobile {
     .cq-chart-setting {
