--- a/sass/components/_timeperiod.scss
+++ b/sass/components/_timeperiod.scss
@@ -201,7 +201,7 @@
             padding: 10px 5px !important;
         }
     }
-    .smartcharts-1100 & {
+    .smartcharts-1280 & {
         width: 100px !important;
         top: 0px;
 
